Changes to sprint, release and defects flow